=================
Changes for Crate
=================

Unreleased
==========

 - Fixed handling of non-deterministic functions

2015/09/15 0.50.6
=================

 - Display column names that contain a dot correctly in information schema
   and result column headers

 - Fixed an issue that could kill long running queries on shards with few
   segments containing huge amounts of documents

2015/08/28 0.50.5
=================

 - Fixed an issue that could cause `COPY FROM` to ignore a primary key
   constraint leading to duplicate rows.
   This could happen if a table has multiple primary keys and clustered by is
   set to one primary key column other than the first primary key column.

2015/08/27 0.50.4
=================

 - Fixed an issue that could cause long running operations to get killed

 - Fixed an issue where the `orphan_partition` column in the `sys.shards` table
   could return a wrong result if the shard was part of a custom table.

 - Fixed an issue that caused stuck jobs to return an empty result instead of
   an error.

2015/08/06 0.50.3
=================

 - Updated crate-admin to 0.14.3 which includes the following changes:

   - fixed line wrapping in console result table

 - Fixed an issue which could cause the blob recovery process to hang under some
   rare circumstances

 - Fixed an issue that caused ``COPY TO .. s3`` statements to leave the cluster
   in an inaccessible state

 - Fixed an issue that could cause a count function on partitioned tables
   to cause an error if a partition was deleted concurrently.

2015/07/29 0.50.2
=================

 - Fix: reduced the amount of unnecessary data handled on select queries

 - Fixed an issue which prevented column updates to be noticed in the cluster
   on tables in custom schemas.

 - Fix: issuing ``KILL ALL`` when a ``SELECT`` statement hung due to a node
   becoming unavailable during execution could result in error response
